Display blocks as responsive

--- a/frontend/app/components/common/header/header.component.html
+++ b/frontend/app/components/common/header/header.component.html
@@ -1,5 +1,5 @@
 
   <div id="cmr-header" class="cadre-header">
     <gn-cmr-breadcrumb [path]="path" [currentPage]="currentPage"></gn-cmr-breadcrumb>
-    <h5>{{ currentPage }}</h5>
+    <h5 class="mb-0">{{ currentPage }}</h5>
   </div>
