--- a/frontend/app/components/sites/form/site-form.component.html
+++ b/frontend/app/components/sites/form/site-form.component.html
@@ -1,8 +1,8 @@
 <div class="main">
   <gn-cmr-mask *ngIf="waitControl" text="Contrôles en cours..."></gn-cmr-mask>
   <gn-cmr-header [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ')+ module.forms.site.label + (bEdit ? ': ' + site.name : '')"></gn-cmr-header>
-  <div class="flex-container">
-      <div class="cadre" [style.min-height]="cardContentHeight + 'px'">
+  <div class="row">
+      <div class="cadre cadre-left col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6" [style.min-height]="cardContentHeight + 'px'">
         <pnx-map height="100%" class="map-card">
           <pnx-gps (markerChanged)="setNewGeometry($event)"></pnx-gps>
           <pnx-leaflet-filelayer (onGeomChange)="onGeomChangeGPSFile($event)" [editMode]="true"></pnx-leaflet-filelayer>
@@ -20,7 +20,7 @@
           ></pnx-geojson>
         </pnx-map>
       </div>
-      <div class="cadre scroll">
+      <div class="cadre col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 scroll">
         <div class="clearfix">
           <h4 class="float-left">{{ bEdit ? 'Edition' : 'Création'}} {{module.forms.site.label}} {{bEdit ? ': ' + site.name : ''}}</h4>
           <span class="float-right" *ngIf="!bEdit">
