--- a/frontend/app/components/modules/form/module-form.component.html
+++ b/frontend/app/components/modules/form/module-form.component.html
@@ -1,10 +1,10 @@
 <div class="main">
   <gn-cmr-header [currentPage]="'Edition Module: ' + module.module_label"></gn-cmr-header>
-  <div class="flex-container">
-    <div class="cadre" [style.min-height]="cardContentHeight + 'px'" [style.max-height]="cardContentHeight + 'px'">
+  <div class="row">
+    <div class="cadre cadre-left col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6" [style.min-height]="cardContentHeight + 'px'" [style.max-height]="cardContentHeight + 'px'">
       <pnx-map height="100%" class="map-card"></pnx-map>
     </div>
-    <div class="cadre scroll" [style.max-height]="cardContentHeight + 'px'" style="overflow-y:auto">
+    <div class="cadre col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 scroll" [style.max-height]="cardContentHeight + 'px'" style="overflow-y:auto">
       <h3>Edition Module: {{ module.module_label }}</h3>
       <div class="">
         <table class="table table-striped table-sm scrollable">
