--- a/frontend/app/components/observation/form/observation-form.component.html
+++ b/frontend/app/components/observation/form/observation-form.component.html
@@ -1,7 +1,7 @@
 <div class="main">
   <gn-cmr-header [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ') + module.forms.observation.label"></gn-cmr-header>
-  <div class="flex-container">
-    <div class="cadre" [style.min-height]="cardContentHeight + 'px'" [style.max-height]="cardContentHeight + 'px'">
+  <div class="row">
+    <div class="cadre cadre-left col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6" [style.min-height]="cardContentHeight + 'px'" [style.max-height]="cardContentHeight + 'px'">
       <div id="details">
         <div class="">
           <div class="mb-2">
@@ -30,7 +30,7 @@
         ></pnx-geojson>
       </pnx-map>
     </div>
-    <div id="detail-form" class="cadre scroll"  [style.max-height]="cardContentHeight + 'px'">
+    <div id="detail-form" class="cadre col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 scroll"  [style.max-height]="cardContentHeight + 'px'">
       <div class="">
         <h3>Détails</h3>
       </div>
