--- a/frontend/app/components/sitegroups/form/sitegroups-form.component.html
+++ b/frontend/app/components/sitegroups/form/sitegroups-form.component.html
@@ -1,7 +1,7 @@
 <div class="main">
   <gn-cmr-header [path]="path" [currentPage]="(bEdit ? 'Edition ' : 'Création ')+ module.forms.sitegroup.label + (bEdit ? ': ' + sitegroup.name : '')"></gn-cmr-header>
-  <div class="flex-container">
-    <div class="cadre" [style.min-height]="cardContentHeight + 'px'">
+  <div class="row">
+    <div class="cadre cadre-left col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6" [style.min-height]="cardContentHeight + 'px'">
       <pnx-map height="100%" class="map-card">
         <pnx-leaflet-draw 
           [geojson]="mapFeature ? mapFeature.geometry : null" 
@@ -11,7 +11,7 @@
         </pnx-leaflet-draw>
       </pnx-map>
     </div>
-    <div class="cadre scroll">
+    <div class="cadre col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 scroll">
       <div class="clearfix">
         <h4 class="float-left">{{ bEdit ? 'Edition' : 'Création'}} {{module.forms.sitegroup.label}} {{bEdit ? ': ' + sitegroup.name : ''}}</h4>
         <span class="float-right" *ngIf="!bEdit">
