Add scrollbar on tables

--- a/frontend/app/components/modules/home/module-home.component.html
+++ b/frontend/app/components/modules/home/module-home.component.html
@@ -77,6 +77,7 @@
             [limit]="15"
             [headerHeight]="50"
             [footerHeight]="50"
+            [scrollbarH]="true"
             [selectionType]="'single'"
             [selected]="selected"
             [messages]="{emptyMessage: 'Aucune donnée disponible', totalMessage: 'Total', selectedMessage: 'sélectionné'}"
@@ -124,6 +125,7 @@
             [limit]="15"
             [headerHeight]="50"
             [footerHeight]="50"
+            [scrollbarH]="true"
             [selectionType]="'single'"
             [selected]="selected"
             [messages]="{emptyMessage: 'Aucune donnée disponible', totalMessage: 'Total', selectedMessage: 'sélectionné'}"
@@ -176,6 +178,7 @@
             [limit]="15"
             [headerHeight]="50"
             [footerHeight]="50"
+            [scrollbarH]="true"
             [selectionType]="'single'"
             [selected]="selectedIndividual"
             (activate)="onIndividualRowClick($event)"
