--- a/frontend/app/components/sitegroups/details/sitegroups-details.component.html
+++ b/frontend/app/components/sitegroups/details/sitegroups-details.component.html
@@ -78,6 +78,7 @@
             [limit]="15"
             [headerHeight]="50"
             [footerHeight]="50"
+            [scrollbarH]="true"
             [selectionType]="'single'"
             [selected]="selected"
             (activate)="onSiteRowClick($event)"
@@ -129,6 +130,7 @@
             [limit]="15"
             [headerHeight]="50"
             [footerHeight]="50"
+            [scrollbarH]="true"
             [selectionType]="'single'"
             [selected]="selectedIndividual"
             (activate)="onIndividualRowClick($event)"
