--- a/frontend/app/components/sites/details/site-details.component.html
+++ b/frontend/app/components/sites/details/site-details.component.html
@@ -72,6 +72,7 @@
               [limit]="15"
               [headerHeight]="50"
               [footerHeight]="50"
+              [scrollbarH]="true"
               [sorts]="[{prop: 'date', dir:'desc'}]"
               [messages]="{emptyMessage: 'Aucune donnée disponible', totalMessage: 'Total', selectedMessage: 'sélectionné'}">
 
@@ -117,6 +118,7 @@
               [limit]="15"
               [headerHeight]="50"
               [footerHeight]="50"
+              [scrollbarH]="true"
               [messages]="{emptyMessage: 'Aucune donnée disponible', totalMessage: 'Total', selectedMessage: 'sélectionné'}">
 
               <ngx-datatable-column width="25" headerClass="col-action" cellClass="col-action">
