--- a/frontend/app/components/individuals/details/individual-details.component.html
+++ b/frontend/app/components/individuals/details/individual-details.component.html
@@ -74,6 +74,7 @@
                       [limit]="15"
                       [headerHeight]="50"
                       [footerHeight]="50"
+                      [scrollbarH]="true"
                       [sorts]="[{prop: 'visit_date',dir:'desc'}]"
                       [selectionType]="'single'"
                       [selected]="selected"
