--- a/frontend/app/components/visits/details/visit-details.component.html
+++ b/frontend/app/components/visits/details/visit-details.component.html
@@ -44,7 +44,8 @@
           [count]="observations.length"
           [limit]="15"
           [headerHeight]="50"
-          [footerHeight]="50">
+          [footerHeight]="50"
+          [scrollbarH]="true">
 
           <ngx-datatable-column width="60">
             <ng-template let-row="row" ngx-datatable-cell-template>
