--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -12,7 +12,7 @@
 .cadre-header {
   background-color: white;
   padding: 5px;
-  margin: 0px 5px 5px 5px;
+  margin: 0px 5px;
 }
 .cadre {
   background-color: white;
