--- a/frontend/app/components/observation/form/observation-form.component.html
+++ b/frontend/app/components/observation/form/observation-form.component.html
@@ -31,9 +31,7 @@
       </pnx-map>
     </div>
     <div id="detail-form" class="cadre col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 scroll"  [style.max-height]="cardContentHeight + 'px'">
-      <div class="">
-        <h3>Détails</h3>
-      </div>
+      <h4>Détails {{module.forms.observation.label}}</h4>
       <form [formGroup]="allForm">
         <pnx-dynamic-form-generator
           class="obj-form"
