--- a/frontend/app/components/visits/details/visit-details.component.html
+++ b/frontend/app/components/visits/details/visit-details.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <gn-cmr-header [path]="path" [currentPage]="module.forms.visit.label"></gn-cmr-header>
+  <gn-cmr-header [path]="path" [currentPage]="module.forms.visit.label + ': ' + _dataService.formatProperty(visit?.date, module.forms.visit.fields['date'])"></gn-cmr-header>
   <div class="row">
     <div class="cadre cadre-left col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6" [style.min-height]="cardContentHeight + 'px'">
       <div id="details">
@@ -32,41 +32,50 @@
         <h4 class="font-italic">Visite sans observation</h4>
       </div>
       <div class="" *ngIf="visit.observation">
-        <h3>{{module.forms.observation.label_plural}}</h3>
-        <div *ngIf="visit.observation === true && visit.nb_observations == 0" class="alert alert-warning">
-          <i class="fa fa-warning"></i>&nbsp;Cette visite devrait avoir au moins 1 observation!
-        </div>
-        <div class="toolbar clearfix">
-          <button *ngIf="module?.cruved?.C !== '0'"class="btn btn-success float-left" (click)="onClickAddObservation()"><i class="fa fa-plus-circle"></i>&nbsp;Ajout Observation</button>
-        </div>
-        <ngx-datatable #table
-          class="material striped margin-top-xs"
-          [rows]="observations"
-          [rowHeight]="40"
-          [draggable]="false"
-          [count]="observations.length"
-          [limit]="15"
-          [headerHeight]="50"
-          [footerHeight]="50"
-          [scrollbarH]="true"
-          [messages]="{emptyMessage: 'Aucune donnée disponible', totalMessage: 'Total', selectedMessage: 'sélectionné'}">
+        <nav>
+          <div class="nav nav-tabs" id="nav-tab" role="tablist">
+            <a class="nav-item nav-link active" data-toggle="tab" aria-selected="true" id="nav-observation-tab" href="#observation-tab">{{module.forms.observation.label_plural}}<span class="badge badge-pill badge-primary ml-2">{{observations.length}}</span></a>
+          </div>
+          <!-- TAB observations-->
+          <div class="tab-content" id="nav-tabContentRight">
+            <div class="tab-pane fade active show" id="observation-tab" role="tabpanel" attr.aria-labelledby="nav-observation-tab">
+              <div *ngIf="visit.observation === true && visit.nb_observations == 0" class="alert alert-warning">
+                <i class="fa fa-warning"></i>&nbsp;Cette visite devrait avoir au moins 1 observation!
+              </div>
+              <div class="toolbar clearfix">
+                <button *ngIf="module?.cruved?.C !== '0'"class="btn btn-success float-left" (click)="onClickAddObservation()"><i class="fa fa-plus-circle"></i>&nbsp;Ajout Observation</button>
+              </div>
+              <ngx-datatable #table
+                class="material striped margin-top-xs"
+                [rows]="observations"
+                [rowHeight]="40"
+                [draggable]="false"
+                [count]="observations.length"
+                [limit]="15"
+                [headerHeight]="50"
+                [footerHeight]="50"
+                [scrollbarH]="true"
+                [messages]="{emptyMessage: 'Aucune donnée disponible', totalMessage: 'Total', selectedMessage: 'sélectionné'}">
 
-          <ngx-datatable-column width="60">
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['observation', row.id_observation]">
-                <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Détails ' + module.forms.observation.label"></i>
-              </a>
-              <a *ngIf="module?.cruved?.U !== '0'" class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['individual', row.id_individual, 'observation', {edit: row.id_observation}]">
-                <i class="fa fa-pencil-square-o" aria-hidden="true" [matTooltip]="'Editer ' + module.forms.observation.label"></i>
-              </a>
-            </ng-template>
-          </ngx-datatable-column>
-          <ngx-datatable-column *ngFor="let prop of observationListProperties" [width]="prop.width" [name]="observationFieldsDef[prop.field].attribut_label" [prop]="prop.field" [cellClass]="'text-' + (prop['align'] ? prop['align'] : 'left')" >
-            <ng-template let-row="row" ngx-datatable-cell-template>
-              <span>{{_dataService.formatProperty(row[prop.field], observationFieldsDef[prop.field])}}</span>
-            </ng-template>
-          </ngx-datatable-column>
-        </ngx-datatable>
+                <ngx-datatable-column width="60">
+                  <ng-template let-row="row" ngx-datatable-cell-template>
+                    <a class="clickable btn btn-no-padding bt-ghost" [routerLink]="['observation', row.id_observation]">
+                      <i class="fa fa-info-circle" aria-hidden="true" [matTooltip]="'Détails ' + module.forms.observation.label"></i>
+                    </a>
+                    <a *ngIf="module?.cruved?.U !== '0'" class="clickable btn btn-no-padding bt-ghost ml-1" [routerLink]="['individual', row.id_individual, 'observation', {edit: row.id_observation}]">
+                      <i class="fa fa-pencil-square-o" aria-hidden="true" [matTooltip]="'Editer ' + module.forms.observation.label"></i>
+                    </a>
+                  </ng-template>
+                </ngx-datatable-column>
+                <ngx-datatable-column *ngFor="let prop of observationListProperties" [width]="prop.width" [name]="observationFieldsDef[prop.field].attribut_label" [prop]="prop.field" [cellClass]="'text-' + (prop['align'] ? prop['align'] : 'left')" >
+                  <ng-template let-row="row" ngx-datatable-cell-template>
+                    <span>{{_dataService.formatProperty(row[prop.field], observationFieldsDef[prop.field])}}</span>
+                  </ng-template>
+                </ngx-datatable-column>
+              </ngx-datatable>
+            </div>
+          </div>
+        </nav>
       </div>
     </div>
   </div>
