Update test cmr with new site label

--- a/config/cmr/test_cmr/backend/templates/fiche_individu.html
+++ b/config/cmr/test_cmr/backend/templates/fiche_individu.html
@@ -39,7 +39,7 @@
     <tr>
         <th>Date</th>
         <th>Aire d'étude</th>
-        <th>Point de capture</th>
+        <th>Piège</th>
         <th>Stade de développment</th>
         <th>Âge</th>
         <th>Etat</th>
